--- a/index.html
+++ b/index.html
@@ -513,11 +513,12 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-left">
-    <p class="hero-tag">Pre-Dental · University of Miami · Class of 2026</p>
+    <p class="hero-tag">Pre-Dental Student · University of Miami · Class of 2026</p>
     <h1 class="hero-name">Aspiring<br><em>Dentist.</em><br>Leader.</h1>
     <div class="hero-divider"></div>
     <p class="hero-bio">
-      A dedicated pre-dental student at the University of Miami with a strong foundation in community service, institutional leadership, and international healthcare outreach. Committed to building sustainable oral health systems and serving underrepresented communities worldwide.
+      Grace is a Miami native representing five generations of local legacy and a dedicated pre-dental student committed to expanding access to oral healthcare. As the founding president of Global Dental Brigades, she leads international service initiatives focused on sustainable dental care and community education in underserved areas.<br><br>
+      On campus, Grace serves as a Peer-Led Team Learning workshop leader and a teaching assistant for First Year Directions, mentoring students through their academic and personal transitions. She is also active in Student Government and Greek life, recently completing her term as Vice President of Member Development for Alpha Delta Pi. Recognized with the R. Marilyn Jones Memorial Scholarship and as an Order of Omega tappee, Grace is driven by a passion for dentistry, leadership, and service both locally and globally.
     </p>
     <div class="hero-cta">
       <a href="#leadership" class="btn btn-primary">View Experience</a>
@@ -584,9 +585,23 @@
 
     <div class="role-card">
       <p class="role-org">University of Miami</p>
-      <h3 class="role-title">Honor Council · PLTL Workshop Leader · TA</h3>
-      <p class="role-date">August 2024 – Present</p>
-      <p class="role-desc">Served on the Undergraduate Honor Council (Aug 2024–Jan 2025, Dean Collette Mighty). Leads peer-learning workshops for the Department of Biology PLTL Program (May 2025–Present, Dr. Kevin McCracken). Served as Teaching Assistant for the First Year Directions Course (May 2025–Jan 2026, Jon Baldessari).</p>
+      <h3 class="role-title">Undergraduate Honor Council Member</h3>
+      <p class="role-date">August 2024 – January 2025 · Dean Collette Mighty</p>
+      <p class="role-desc">Served on the University of Miami Undergraduate Honor Council, upholding academic integrity standards and participating in the adjudication of academic misconduct cases across the university community.</p>
+    </div>
+
+    <div class="role-card">
+      <p class="role-org">University of Miami · Department of Biology</p>
+      <h3 class="role-title">PLTL Workshop Leader</h3>
+      <p class="role-date">May 2025 – Present · Dr. Kevin McCracken</p>
+      <p class="role-desc">Leads peer-led team learning workshops for the Department of Biology, facilitating collaborative problem-solving sessions that support student comprehension of core biological concepts and strengthen academic performance.</p>
+    </div>
+
+    <div class="role-card">
+      <p class="role-org">University of Miami · First Year Directions</p>
+      <h3 class="role-title">Teaching Assistant</h3>
+      <p class="role-date">May 2025 – January 2026 · Jon Baldessari</p>
+      <p class="role-desc">Assisted in delivering the First Year Directions course, supporting incoming students in their transition to university life, developing academic skills, and building a strong foundation for success at the University of Miami.</p>
     </div>
   </div>
 </section>
@@ -687,8 +702,10 @@
 
 <!-- FOOTER -->
 <footer id="contact">
-  <p style="font-family: 'Cormorant Garamond', serif; font-size: 1.5rem; font-weight: 300; color: var(--gold-light); margin-bottom: 1rem;">University of Miami · Pre-Dental</p>
+  <p style="font-family: 'Cormorant Garamond', serif; font-size: 1.5rem; font-weight: 300; color: var(--gold-light); margin-bottom: 1rem;">University of Miami · Pre-Dental Student</p>
   <p>Aspiring dentist committed to global health equity &amp; community service</p>
+  <br>
+  <p><strong>tgwheeling@gmail.com</strong> &nbsp;·&nbsp; <strong>305-496-1269</strong></p>
 </footer>
 
 <script>
