--- a/index.html
+++ b/index.html
@@ -571,16 +571,16 @@
 
     <div class="role-card">
       <p class="role-org">Alpha Delta Pi</p>
-      <h3 class="role-title">VP of Member Development & Founding IAC Chair</h3>
+      <h3 class="role-title">Vice President of Member Development & Founding IAC Chair</h3>
       <p class="role-date">August 2024 – Present · Advisor: Mrs. Anita Shuffield</p>
-      <p class="role-desc">Progressed through positions of increasing responsibility: Founding Chairperson of the Infrastructure Advisory Committee (Dec 2025–Present), Vice President of Member Development (Jan 2025–Jan 2026), and Assistant VP of Recruitment (Aug–Jan 2025). Led Standards Council adjudication, managed property renovation, and oversaw alumni relations for major recruitment events.</p>
+      <p class="role-desc">Progressed through positions of increasing responsibility: Founding Chairperson of the Infrastructure Advisory Committee (Dec 2025–Present), Vice President of Member Development (Jan 2025–Jan 2026), and Assistant Vice President of Recruitment (Aug–Jan 2025). Led Standards Council adjudication, managed property renovation, and oversaw alumni relations for major recruitment events.</p>
     </div>
 
     <div class="role-card">
-      <p class="role-org">University of Miami Student Government</p>
-      <h3 class="role-title">Campus Safety & DEI Specialist</h3>
+      <p class="role-org">University of Miami</p>
+      <h3 class="role-title">Student Government</h3>
       <p class="role-date">August 2023 – May 2025</p>
-      <p class="role-desc">Served as Campus Safety Specialist on the Campus Liaison Council, advancing student-driven safety initiatives including anti-tailgating policies and speed bump installation. Previously served as DEI Specialist on the First-Year Leadership Council, spearheading Indigenous student advocacy and securing university recognition of Indigenous People's Day.</p>
+      <p class="role-desc">Served as Campus Safety and Security Specialist on the Campus Liaison Council (2024–2025), advancing student-driven safety initiatives including anti-tailgating policies and speed bump installation in residential areas, and developing virtual fraud prevention education with UMPD. Previously served as Diversity, Equity, and Inclusion Specialist on the First-Year Leadership Council (2023–2024), spearheading Indigenous student advocacy, securing university recognition of Indigenous People's Day, and partnering with the Office of Multicultural Affairs to incorporate Seminole and Miccosukee Tribe land acknowledgements into course syllabi.</p>
     </div>
 
     <div class="role-card">
@@ -592,16 +592,16 @@
 
     <div class="role-card">
       <p class="role-org">University of Miami · Department of Biology</p>
-      <h3 class="role-title">PLTL Workshop Leader</h3>
+      <h3 class="role-title">Workshop Leader, PLTL Program</h3>
       <p class="role-date">May 2025 – Present · Dr. Kevin McCracken</p>
-      <p class="role-desc">Leads peer-led team learning workshops for the Department of Biology, facilitating collaborative problem-solving sessions that support student comprehension of core biological concepts and strengthen academic performance.</p>
+      <p class="role-desc">Leads peer-led team learning workshops for Evolutionary Biology (BIL 160) at the University of Miami, facilitating collaborative problem-solving sessions that support student comprehension of core biological concepts and strengthen academic performance.</p>
     </div>
 
     <div class="role-card">
       <p class="role-org">University of Miami · First Year Directions</p>
       <h3 class="role-title">Teaching Assistant</h3>
       <p class="role-date">May 2025 – January 2026 · Jon Baldessari</p>
-      <p class="role-desc">Assisted in delivering the First Year Directions course, supporting incoming students in their transition to university life, developing academic skills, and building a strong foundation for success at the University of Miami.</p>
+      <p class="role-desc">Assisted in delivering First-Year Directions (FYD 101) at the University of Miami, supporting incoming students in their transition to university life, developing academic skills, and building a strong foundation for success.</p>
     </div>
   </div>
 </section>
@@ -618,7 +618,7 @@
     <div class="service-item">
       <div class="service-icon">⛪</div>
       <div class="service-name">Plymouth Congregational Church</div>
-      <div class="service-detail">January 2021 – Present<br>Volunteer · Rev. Alvin W. Bunis, Jr.<br><br>Long-standing volunteer supporting Rebuilding Together Miami, Coconut Grove Crisis Food Pantry, Chapman Partnership family homelessness support, and international humanitarian aid.</div>
+      <div class="service-detail">January 2021 – Present<br>Youth Council Chairperson & Volunteer · Rev. Alvin W. Bunis, Jr.<br><br>Long-standing volunteer and Youth Council Chairperson supporting Rebuilding Together Miami, Coconut Grove Crisis Food Pantry, Chapman Partnership family homelessness support, and international humanitarian aid.</div>
     </div>
 
     <div class="service-item">
@@ -635,7 +635,7 @@
 
     <div class="service-item">
       <div class="service-icon">🌍</div>
-      <div class="service-name">International Dental Brigades</div>
+      <div class="service-name">Global Dental Brigades</div>
       <div class="service-detail">Athens, Greece & Guatemala City, Guatemala<br><br>Coordinates international service trips where students work alongside dental professionals and local communities to establish sustainable oral health systems.</div>
     </div>
 
@@ -646,9 +646,9 @@
     </div>
 
     <div class="service-item">
-      <div class="service-icon">🛡️</div>
-      <div class="service-name">UM Campus Safety Advocacy</div>
-      <div class="service-detail">University of Miami, 2024–2025<br><br>Implemented anti-tailgating policies, strengthened campus housing security, installed residential speed bumps, and developed virtual fraud prevention education with UMPD.</div>
+      <div class="service-icon">🏠</div>
+      <div class="service-name">Ronald McDonald House Charities</div>
+      <div class="service-detail">Volunteer<br><br>Supports families of seriously ill children by volunteering at Ronald McDonald House Charities, providing comfort, meals, and a welcoming environment to those navigating difficult medical journeys.</div>
     </div>
   </div>
 </section>
